# global-gender-predictor

./: LICENSE  README.md  pyproject.toml  setup.py
global_gender_predictor/: __init__.py  global_gender_predictor.py
global_gender_predictor/data/: transform_data.py
tests/: test_global_gender_predictor.py
