[project]
name = "global_gender_predictor"
version = "0.0.2"
authors = [
  { name="attract.ai", email="hello@attract.ai" },
]
description = "Predict gender using first name using data from World Gender Name Dictionary 2.0."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/attract-ai/global-gender-predictor"
"Bug Tracker" = "https://github.com/attract-ai/global-gender-predictor/issues"

